try fix jump

--- a/css/base.css
+++ b/css/base.css
@@ -12,7 +12,7 @@
 html,
 body {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: var(--black);
     color: var(--white);
     font-family: Deledda;
@@ -73,7 +73,7 @@ header h1 {
 }
 
 main {
-    height: 100%;
+    min-height: 100%;
     padding: 0 5% 3% 5%;
     display: flex;
     flex-direction: column;
