--- a/css/section.css
+++ b/css/section.css
@@ -9,18 +9,18 @@ section {
     display: flex;
     flex-direction: column;
 }
-h1{
+section h1{
     font-size: 2.2rem;
     margin-bottom: 1.1rem;
     color: rgb(89, 214, 243);
 }
-h2{
+section h2{
     font-size: 2rem;
     margin-bottom: 1rem;
     margin-top: 1.1rem;
     color: rgb(121, 155, 248);
 }
-h3{
+section h3{
     font-size: 1.6rem;
     margin-bottom: 0.6rem;
     margin-top: 0.8rem;
